fix first 2 sections and add logo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-.text-color {
-  color: #f7c3f5;
+:root {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
-.embla {
-  overflow: hidden;
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
-.embla__container {
-  display: flex;
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
 }
-.embla__slide {
-  flex: 0 0 100%;
-  min-width: 0;
+
+@layer components {
+  .text-color {
+    color: #f7c35f;
+  }
+
+  .embla {
+    overflow: hidden;
+  }
+  .embla__container {
+    display: flex;
+  }
+  .embla__slide {
+    flex: 0 0 100%;
+    min-width: 0;
+  }
 }
